Changed keyboard layout for input fields.

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="col">
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Length</span>
-            <input type="number" class="form-control" id="length" placeholder="Inches">
+            <input type="number" inputmode="decimal" class="form-control" id="length" placeholder="Inches">
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Width</span>
-            <input type="number" class="form-control" id="width" placeholder="Inches">
+            <input type="number" inputmode="decimal" class="form-control" id="width" placeholder="Inches">
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Thickness</span>
-            <input type="number" class="form-control" id="thickness" placeholder="Inches">
+            <input type="number" inputmode="decimal" class="form-control" id="thickness" placeholder="Inches">
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Price/BDFT</span>
-            <input type="number" class="form-control" id="price">
+            <input type="number" inputmode="decimal" class="form-control" id="price">
           </div>
 
           <button type="button" class="btn btn-success" onclick="calculate()">Calculate</button>
